New featureAuth branch has been created for user authorization and registration
