# docs/swagger.json
@@ -9,6 +9,57 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
+        "/api/Auth": {
+            "post": {
+                "description": "Authenticates user and generates JWT token.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "User Authentication",
+                "parameters": [
+                    {
+                        "description": "User credentials",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/modelRequests.AuthUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "JWT token",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "User does not exist",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/api/CreateTask": {
             "post": {
                 "description": "Creates a new task in the system based on the provided JSON payload.",
@@ -102,6 +153,57 @@
                 }
             }
         },
+        "/api/Registration": {
+            "post": {
+                "description": "Registers a new user in the system.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "User Registration",
+                "parameters": [
+                    {
+                        "description": "User credentials",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/modelRequests.RegisterUserRequests"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User successfully created",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "User already exists",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/api/UpdTask": {
             "put": {
                 "description": "Updates an existing task in the system based on the provided JSON payload.",
@@ -122,7 +224,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdateTaskRequest"
+                            "$ref": "#/definitions/modelRequests.UpdateTaskRequest"
                         }
                     }
                 ],
@@ -195,6 +297,61 @@
         }
     },
     "definitions": {
+        "modelRequests.AuthUserRequest": {
+            "type": "object",
+            "required": [
+                "login",
+                "password"
+            ],
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "modelRequests.RegisterUserRequests": {
+            "type": "object",
+            "required": [
+                "email",
+                "login",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "modelRequests.UpdateTaskRequest": {
+            "type": "object",
+            "required": [
+                "due_date",
+                "title"
+            ],
+            "properties": {
+                "ID": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "due_date": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "models.CreateTaskRequest": {
             "type": "object",
             "required": [
@@ -233,27 +390,9 @@
                 },
                 "updateAt": {
                     "type": "string"
-                }
-            }
-        },
-        "models.UpdateTaskRequest": {
-            "type": "object",
-            "required": [
-                "due_date",
-                "title"
-            ],
-            "properties": {
-                "ID": {
+                },
+                "userID": {
                     "type": "integer"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "due_date": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
                 }
             }
         }
