# internal/modelRequests/AuthUserRequest.go
@@ -1,0 +1,8 @@
+package modelRequests
+
+
+type AuthUserRequest struct {
+	Login    string `json:"login" binding:"required"`
+	Password string  `json:"password" binding:"required"`
+}
+
